--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -45,6 +45,7 @@
         & i {
             font-size: $fontsize-15;
             margin-right: 10px;
+            color: black;
         }
     } 
 }
