--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@ $color-terciary: #99E2D0;
 $color-background: #F5F5F7;
 $color-grey: grey;
 $color-white: white;
+$color-black: #000000;
 
 /* font-size */
 $fontsize-10: 1em;
