--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -37,7 +37,7 @@
 .functioning {
     padding: 50px 0;
     & h1 {
-        margin-left: 20px;
+        margin-left: 5%;
     }
     &__card {
         display: flex;
@@ -66,4 +66,10 @@
     }
 }
 
-
+.restaurant{
+    background: $color-background;
+    padding: 30px 0;
+    &__title {
+        margin-left: 5%;
+    }
+}
