--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,6 +15,7 @@
 @import "./layout/container";
 @import "./layout/form";
 @import "./layout/main";
+@import "./layout/footer";
 
 
 @import "./pages/work";
