--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,6 +13,7 @@ $fontsize-15: 1.5em;
 
 /* font-weight */
 $fontweight-200: 200;
+$fontweight-300: 300;
 $fontweight-400: 400;
 $fontweight-600: 600;
 
