--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,22 +1,32 @@
 @font-face {
-    font-family: 'Roboto';
-    src: url(../../styles/fonts/roboto/Roboto-Regular.ttf) format("truetype");
-    font-weight: 400;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url(../../styles/fonts/roboto/Roboto-Bold.ttf) format("truetype");
-    font-weight: 600;
-}
-@font-face {
-    font-family: 'Roboto';
-    src: url(../../styles/fonts/roboto/Roboto-Thin.ttf) format("truetype");
+    font-family: "Roboto";
+    src: url(../styles/fonts/roboto/Roboto-Thin.ttf) format('truetype');
     font-weight: 200;
+    font-style: normal;
 }
+@font-face {
+    font-family: "Roboto";
+    src: url(../styles/fonts/roboto/Roboto-Light.ttf) format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Roboto";
+    src: url(../styles/fonts/roboto/Roboto-Regular.ttf) format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: "Roboto";
+    src: url(../styles/fonts/roboto/Roboto-Bold.ttf) format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+
 
 @font-face {
     font-family: 'Shrikhand';
-    src: url(../../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format("truetype");
+    src: url(../../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format('truetype');
 }
 
 // Usage
@@ -26,12 +36,17 @@ h1, h2 {
 h3 {
     font-family: 'Shrikhand', Arial, Helvetica, sans-serif;
 }
+h4 {
+    @include typography_roboto ($fontsize-10,$fontweight-300);
+}
 p {
-    @include typography_roboto ($fontsize-10,$fontweight-200);
+    font-family:"Roboto", Arial, Helvetica, sans-serif;
+    font-weight: 200;
+    font-size: 1em;
 }
 span {
     @include typography_roboto ($fontsize-10,$fontweight-400);
 }
 button {
-    @include typography_roboto ($fontsize-10,$fontweight-400)
+    @include typography_roboto ($fontsize-10,$fontweight-400);
 }
