--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -9,3 +9,11 @@ button {
     cursor: pointer;
     box-shadow: 0px 5px 8px 1px darken($color-background, 25%);
 }
+
+
+
+/* centrage button page Menu */ 
+.button {
+    display: flex;
+    padding-bottom: 50px;
+}
