--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -1,1 +1,135 @@
+/* Index */
+.prev {
+    &__location {
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: darken($color-background, 3%);
+        box-shadow:inset 0px 2px 3px 0px darken($color-background, 20%);
+        & i {
+            margin-right: 10px;
+        }
+        & p {
+            font-weight: bold;
+        }
+    }
+    &__reservation {
+        background-color: $color-background;
+        padding: 8% 0;
+        display: flex;
+        flex-direction: column;
+        & h1 {
+            margin-top: 0;
+            margin: auto;
+            text-align: center;
+            width: 70%;
+        }
+        & p {
+            width: 90%;
+            margin: auto;
+            margin-top: 15px;
+            text-align: center;
+            font-size: 1.1em;
+        }
+    }
+}
 
+.functioning {
+    padding: 50px 0;
+    & h1 {
+        margin-left: 5%;
+    }
+    &__card {
+        display: flex;
+        align-items: center;
+        & span {
+            width: 25px;
+            height: 25px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: $color-white;
+            font-size: 0.9em;
+            background-color: $color-primary;
+            border-radius: 50%;
+            position: relative;
+            right: 15px;
+        }
+        & i {
+            color: $color-grey;
+            font-size: $fontsize-12;
+        }
+        & p {
+            margin-left: 30px;
+            font-weight: $fontweight-600;
+        }
+    }
+}
+
+.restaurant{
+    background: $color-background;
+    padding: 30px 0;
+    &__title {
+        margin-left: 5%;
+    }
+}
+
+/* Menu page */
+.head__img{
+    height: 200px;
+
+    & img {
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+    }
+    &--border {
+        width: 100%;
+        height: 30px;
+        position: relative;
+        background-color: $color-background;
+        bottom: 30px;
+        border-radius: 30px 30px 0 0;
+    }
+}
+
+
+.menu {
+    background-color: $color-background;
+    border-radius: 40px 40px 0 0;
+    margin-top: -3em;
+    position: relative;
+    &__title {
+        border-radius: 40px 40px 0 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        padding: 30px 30px 0 30px;
+        margin-bottom: 30px;
+        & h3 {
+            font-size: 1.7em;
+        }
+        & i {
+            font-size: 1.5em;
+            margin-right: 20px;
+        }
+    }
+    &__section {
+        padding: 0 15px;
+        margin: 40px 0;
+        &--border{
+            width: 40px;
+            margin-top: 5px;
+            border-bottom: 3px solid $color-terciary;
+        }
+        &--flex {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 90%;
+        }
+    }
+    
+}
