--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,7 @@
 .footer {
     background-color: lighten($color-black, 20%);
     padding: 20px 5%;
+    height: 30%;
     & h3 {
         color: $color-white;
         margin-bottom: 20px;
