--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -26,7 +26,7 @@
 
 @font-face {
     font-family: 'Shrikhand';
-    src: url(../../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format('truetype');
+    src: url(../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format('truetype');
 }
 
 // Usage
