--- a/styles/style.css
+++ b/styles/style.css
@@ -310,6 +310,49 @@ template {
 /* font-size */
 /* font-weight */
 /* display */
+/* Index Loader */
+.loader {
+  animation: loader-out 0ms 2950ms forwards;
+}
+.loader__spinner {
+  animation: spin 1000ms 150ms linear 2.5 forwards;
+  transform-origin: center;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes loader-out {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: translate(-99999px);
+  }
+}
+/*
+$spin-dur: 1000ms;
+$spin-delay: 150ms;
+$body-delay: $spin-dur*3 + $spin-delay;
+.homepage{
+    animation: body-out 0ms $body-delay;
+}
+
+ @keyframes body-out {
+    0% {
+        transform: translateX(-9999px);
+    }
+    100% {
+        transform: scaleX(0);
+    }
+ }
+
+ */
 /* Animation icone Heart */
 .heart-colored {
   transform: scale(0);
@@ -397,7 +440,7 @@ a {
 }
 @font-face {
   font-family: "Shrikhand";
-  src: url(../../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format("truetype");
+  src: url(../styles/fonts/shrikhand/Shrikhand-Regular.ttf) format("truetype");
 }
 h1, h2 {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
@@ -453,12 +496,12 @@ button {
 
 /* heart icon */
 .fa-regular {
-  z-index: 1;
+  z-index: 2;
   font-size: 1.5em;
 }
 
 .heart-colored {
-  z-index: 2;
+  z-index: 3;
   position: absolute;
   font-size: 1.5em;
   color: red;
@@ -770,6 +813,29 @@ button {
 }
 .footer-space {
   margin: 10px 0;
+}
+
+.loader {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  z-index: 5;
+  position: fixed;
+  inset: 0;
+}
+.loader__text {
+  font-family: "Shrikhand";
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+.loader__spinner {
+  width: 70px;
+  height: 70px;
+  border-top: 2px solid #15DEA5;
+  border-radius: 70px;
 }
 
 /*# sourceMappingURL=style.css.map */
