--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./utils/mixins";
 @import "./utils/extensions";
 @import "./utils/animations";
+@import "./utils/maps";
 
 @import "./base/base";
 @import "./base/typography";
