--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -17,3 +17,17 @@
     justify-content: center;
     align-items: center;
 }
+
+/* mixin media queries */
+
+@mixin tablette-only {
+    @media screen and (min-width: map-get($breakpoints, tablette)) {
+        @content;
+    }
+}
+
+@mixin desktop-only {
+    @media screen and (min-width: map-get($breakpoints, desktop)) {
+       @content; 
+    }
+}
