--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,6 +8,13 @@ button {
     color: $color-white;
     cursor: pointer;
     box-shadow: 0px 5px 8px 1px darken($color-background, 25%);
+    @include tablette-only{
+        width: 30%;
+    }
+    @include desktop-only{
+        width: 25%;
+    }
+    
 }
 
 
