--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -69,6 +69,9 @@
     margin: 10px 0;
     display: flex;
     position: relative;
+    @include tablette-only{
+        width: 30%;
+    }
     &--text {
         display: flex;
         justify-content: space-between;
@@ -77,11 +80,16 @@
         & span {
             display: flex;
             align-items: flex-end;
+            @include tablette-only{
+                margin-right: 5%;
+            }
+            
         }
     }
     &--flex {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         overflow: hidden;
         & p {
             white-space: nowrap;
@@ -99,6 +107,9 @@
         border-radius: 0 15px 15px 0;
         position: absolute;
         right: 0;
+        @include tablette-only{
+            width: 15%
+        }
     }
     & h2 {
         @include typography_roboto ($fontsize-12,$fontweight-400);
