--- a/sass/utils/_animations.scss
+++ b/sass/utils/_animations.scss
@@ -27,7 +27,13 @@
     }
 }
 
-
+/* Animation Button */
+button {
+    &:hover {
+        filter: brightness(1.15);
+        box-shadow: 0px 5px 8px 1px darken($color-background, 50%);
+    }
+}
 
 
 /* Animation icone Heart */
@@ -72,7 +78,6 @@
     }
     100% {
         width: 90%;
-        
     }
 }
 
