--- a/styles/style.css
+++ b/styles/style.css
@@ -336,6 +336,12 @@ template {
     transform: translate(-99999px);
   }
 }
+/* Animation Button */
+button:hover {
+  filter: brightness(1.15);
+  box-shadow: 0px 5px 8px 1px #696984;
+}
+
 /* Animation icone Heart */
 .heart-colored {
   transform: scale(0);
@@ -618,6 +624,11 @@ button {
   display: flex;
   position: relative;
 }
+@media screen and (min-width: 801px) {
+  .menu__card {
+    width: 30%;
+  }
+}
 .menu__card--text {
   display: flex;
   justify-content: space-between;
@@ -628,9 +639,15 @@ button {
   display: flex;
   align-items: flex-end;
 }
+@media screen and (min-width: 801px) {
+  .menu__card--text span {
+    margin-right: 5%;
+  }
+}
 .menu__card--flex {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   overflow: hidden;
 }
 .menu__card--flex p {
@@ -648,6 +665,11 @@ button {
   border-radius: 0 15px 15px 0;
   position: absolute;
   right: 0;
+}
+@media screen and (min-width: 801px) {
+  .menu__card--checkbloc {
+    width: 15%;
+  }
 }
 .menu__card h2 {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
@@ -862,6 +884,12 @@ button {
   flex-direction: column;
   justify-content: space-between;
   height: 90%;
+}
+@media screen and (min-width: 801px) {
+  .menu__section--flex {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .footer {
