--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -52,6 +52,7 @@
         }
         @include desktop-only{
             display: flex;
+            justify-content: space-between;
         }
     }
     &__card {
