--- a/styles/style.css
+++ b/styles/style.css
@@ -361,6 +361,7 @@ button:hover {
 .menu__card--text:hover + .menu__card--checkbloc {
   animation: checkbloc 200ms linear both;
   transform-origin: right;
+  visibility: visible;
 }
 .menu__card--text:hover + .menu__card--checkbloc i {
   animation: icon-rotate 400ms;
@@ -537,6 +538,10 @@ button {
   right: 30px;
 }
 
+.fa-heart:hover {
+  cursor: pointer;
+}
+
 /* Check Icon */
 .check-icon {
   background-color: white;
@@ -650,6 +655,11 @@ button {
   justify-content: space-between;
   overflow: hidden;
 }
+.menu__card--flex h2 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .menu__card--flex p {
   white-space: nowrap;
   overflow: hidden;
@@ -665,6 +675,7 @@ button {
   border-radius: 0 15px 15px 0;
   position: absolute;
   right: 0;
+  visibility: hidden;
 }
 @media screen and (min-width: 801px) {
   .menu__card--checkbloc {
@@ -752,6 +763,7 @@ button {
 @media screen and (min-width: 1025px) {
   .functioning__cardflex {
     display: flex;
+    justify-content: space-between;
   }
 }
 .functioning__card {
@@ -918,29 +930,27 @@ button {
   margin: 10px 0;
 }
 
-/*
 .loader {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom right, $color-secondary, $color-primary);
-    z-index: 5;
-    position: fixed;
-    inset: 0;
-    &__text {
-        font-family: 'Shrikhand';
-        font-size: 2em;
-        margin-bottom: 20px;
-    }
-    &__spinner  {
-        width: 70px;
-        height: 70px;
-        border-top: 2px solid #15DEA5;
-        border-radius: 70px;
-    }
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom right, #FF79DA, #9356DC);
+  z-index: 5;
+  position: fixed;
+  inset: 0;
 }
-*/
+.loader__text {
+  font-family: "Shrikhand";
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+.loader__spinner {
+  width: 70px;
+  height: 70px;
+  border-top: 2px solid #15DEA5;
+  border-radius: 70px;
+}
 
 /*# sourceMappingURL=style.css.map */
